--- a/src/components/ui/Card.module.css
+++ b/src/components/ui/Card.module.css
@@ -2,6 +2,7 @@
     background-color: white;
     border-radius: 6px;
     box-shadow: 0 2px 8px rgb(0 0 0 / 20%);
-    width: fit-content;
-    padding: 44px;
+    width: 55%;
+    padding: 12px;
+    margin: 10px;
 }
